testsuite/escript/classes/fail-return-in-ctor.err
fail-return-in-ctor.src:6:9: error: Cannot return a value from a constructor function.